refactor: remove MythicMobs/Vault dependencies and enhance damage system
BREAKING CHANGE: Remove MythicMobs and Vault integration

- Remove MythicMobsManager, MythicMobsHook, VaultHook and related classes
- Remove MobDropConfig, DropHandler, DropRepository, MythicDeathListener
- Add configurable damage system with YAML-based damage_config.yml
- Add DamageConfig, EventConfig, VariableScopeManager, YamlDamageCalculator
- Enhance EntityDamageHandler and PlayerDamageHandler with config support
- Simplify DependencyManager and ExternalSystemManager
- Add comprehensive unit tests for damage config system
- Add tests for trigger components and quest requirements
- Update pom.xml to remove external dependencies